# vision-ai-lab

./: README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md
.github/workflows/: code-review.yml
LLM/: gemini_classify.py  openai_classify.py
detection/: detect.py
videoProcessing/: video_frame_extractor.py
